Added New screens for role assignment

--- a/Spider_EMT.csproj
+++ b/Spider_EMT.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <Folder Include="Utility\DataBase\StoredProcedures\" />
+    <Folder Include="wwwroot\images\extra\" />
   </ItemGroup>
 
 </Project>
