--- a/Spider_EMT.csproj
+++ b/Spider_EMT.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -21,7 +21,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Utility\DataBase\StoredProcedures\" />
     <Folder Include="wwwroot\images\extra\" />
   </ItemGroup>
 
