--- a/Spider_EMT.csproj
+++ b/Spider_EMT.csproj
@@ -26,4 +26,13 @@
     <Folder Include="wwwroot\images\extra\" />
   </ItemGroup>
 
+	<ItemGroup>
+		<UpToDateCheckBuilt Include="wwwroot/css/site.css" Set="Css" />
+		<UpToDateCheckBuilt Include="tailwind.config.js" Set="Css" />
+	</ItemGroup>
+
+	<Target Name="Tailwind" BeforeTargets="Build">
+		<Exec Command="npm run css:build"/>
+	</Target>
+
 </Project>
