Added New Screen - EditSettings - For User Profile Update

--- a/Spider_EMT.csproj
+++ b/Spider_EMT.csproj
@@ -22,7 +22,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\dist\js\pages\" />
-    <Folder Include="wwwroot\images\extra\" />
+    <Folder Include="wwwroot\images\profiles_picture\" />
   </ItemGroup>
 
 </Project>
