--- a/appsettings.json
+++ b/appsettings.json
@@ -11,5 +11,6 @@
   },
   "ss_data_path": "C:\\Users\\MayankCoinStation\\Downloads\\Site_Selection\\ss_data.txt",
   //Base URL based on API server configuration
-  "ApiBaseUrl": "https://localhost:7145/api"
+  "ApiBaseUrl": "https://localhost:7145/api",
+  "BaseUrl": "https://localhost:7145/"
 }
