DB Re-Structuring, Removal of Partial Layout Views, Removal of Preloader on Page Load, Additon of Password - Hash & Salt

--- a/appsettings.json
+++ b/appsettings.json
@@ -12,5 +12,6 @@
   "ss_data_path": "C:\\Users\\MayankCoinStation\\Downloads\\Site_Selection\\ss_data.txt",
   //Base URL based on API server configuration
   "ApiBaseUrl": "https://localhost:7145/api",
-  "BaseUrl": "https://localhost:7145/"
+  "BaseUrl": "https://localhost:7145/",
+  "RecentUserId": "15"
 }
