SP Updates, Navigation Repository Updates, Navigation Controller API Updates, Model Creation for New Table Structure and associated approach, Changes over all Create and Update screens

--- a/appsettings.json
+++ b/appsettings.json
@@ -13,5 +13,7 @@
   //Base URL based on API server configuration
   "ApiBaseUrl": "https://localhost:7145/api",
   "BaseUrl": "https://localhost:7145/",
-  "RecentUserId": "15"
+  "RecentUserId": "9",
+  "UserProfileImgPath": "images\\profiles_picture",
+  "DefaultUserImgPath": "/images/icons/defaultUserImage.jpg"
 }
