Introduced Dashboad Screen and associated Code Changes, FIxed ReadUserProfile Screen, Removed Index Screen Code

--- a/appsettings.json
+++ b/appsettings.json
@@ -15,5 +15,5 @@
   "BaseUrl": "https://localhost:7145/",
   "RecentUserId": "9",
   "UserProfileImgPath": "images\\profiles_picture",
-  "DefaultUserImgPath": "/images/icons/defaultUserImage.jpg"
+  "DefaultUserImgPath": "\\images\\icons\\defaultUserImage.jpg"
 }
