Removed unnecessary using statements from the Razor Pages

--- a/Spider_EMT.csproj
+++ b/Spider_EMT.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\dist\js\pages\**" />
+    <Content Remove="wwwroot\dist\js\pages\**" />
+    <EmbeddedResource Remove="wwwroot\dist\js\pages\**" />
+    <None Remove="wwwroot\dist\js\pages\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="LazyCache.AspNetCore" Version="2.4.0" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.4" />
@@ -21,7 +28,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\dist\js\pages\" />
     <Folder Include="wwwroot\images\profiles_picture\" />
   </ItemGroup>
 
