Added Valiation Summary, Added Data Annotation, Fixed Password and Retype Password Visibility Issue

--- a/.gitignore
+++ b/.gitignore
@@ -364,9 +364,4 @@ FodyWeavers.xsd
 /Pages/HighCharts2.cshtml
 /Pages/HighCharts2.cshtml.cs
 /wwwroot/js/highCharts2.js
-/wwwroot/images/profiles_picture/16784bd2-cf27-474d-b54b-ed94b840e857_joey.jpg
-/wwwroot/images/profiles_picture/207799a0-859c-4704-8c7e-985b49cf6265_joey.jpg
-/wwwroot/images/profiles_picture/98bdbfc3-1d70-480c-bf81-70dc1acd3aec_profilePicWomen - 20KB.jpg
-/wwwroot/images/profiles_picture/d5bb8ca1-c98f-445c-9d86-1b6b603bec1c_joey.jpg
-/wwwroot/images/profiles_picture/d628f5c7-424d-4efa-8c66-d095a7749ad2_profilePic.jpg
-/wwwroot/images/profiles_picture/edb94a60-25ff-49c8-b391-a0c088b8be68_joey.jpg
+/wwwroot/images/profiles_picture/
