01 - Web Security Under the Hood for Web Applications 02 - Secure Web APIs

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,6 +9,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=COINSTATION\\SQLEXPRESS;Initial Catalog=SpiderETMDB;Integrated Security=True;Trust Server Certificate=True"
   },
+  "SecretKey": "kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk",
   "ss_data_path": "C:\\Users\\MayankCoinStation\\Downloads\\Site_Selection\\ss_data.txt",
   //Base URL based on API server configuration
   "ApiBaseUrl": "https://localhost:7145/api",
