--- a/appsettings.json
+++ b/appsettings.json
@@ -15,5 +15,8 @@
   "BaseUrl": "https://localhost:7145/",
   "RecentUserId": "12",
   "UserProfileImgPath": "images\\profiles_picture",
-  "DefaultUserImgPath": "\\images\\icons\\defaultUserImage.jpg"
+  "DefaultUserImgPath": "\\images\\icons\\defaultUserImage.jpg",
+  "JwtSettings": {
+    "SecretKey": "your_secret_key_here"
+  }
 }
