Added Authorise, Add dynamic policy-based auth, caching, and access denial handling

--- a/appsettings.json
+++ b/appsettings.json
@@ -15,7 +15,5 @@
   "BaseUrl": "https://localhost:7145/",
   "UserProfileImgPath": "images\\profiles_picture",
   "DefaultUserImgPath": "\\images\\icons\\defaultUserImage.jpg",
-  "JwtSettings": {
-    "SecretKey": "your_secret_key_here"
-  }
+  "JwtSettings_SecretKey": "kkksasdasdasasdasdsadcewevwveqww" // 32 Characters String
 }
